--- a/index.css
+++ b/index.css
@@ -18,8 +18,6 @@ body {
 
 .header{
     position:fixed;
-    top:0;
-    left:0;
     width: 100%;
     padding: 30px 100px;
     display: flex;
@@ -39,9 +37,8 @@ body {
 .navbar a{
     font-family: clash;
     font-size: 30px;
-    font-weight: bold;
+    font-weight: 500px;
     color: black;
-    font-weight: 500;
     text-decoration: none;
     margin-left: 40px;
 }
@@ -54,6 +51,7 @@ body {
 
 .button{
     margin-left: 50px;
+    margin-right: 50px;
     background-color: black;
 }
 
@@ -88,8 +86,13 @@ body {
     position: absolute;
     top: 100%;
     font-size: 25px;
-    line-height: 30px;
-    font-weight: 300;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 28px;
+    text-transform: capitalize;
+    color: #000000;
+    opacity: 0.5;
 }
 
 .star2{
@@ -225,7 +228,87 @@ z-index: 70;
 position: absolute;
 right: 63.18%;
 top: 100.85%;
-
 filter: drop-shadow(48px 48px 100px rgba(0, 0, 0, 0.2));
+transform: rotate(15deg);
+z-index: 100;
+}
 
+.red2{
+position: absolute;
+width: 550px;
+height: 500px;
+left: 100px;
+top: 1000.85px;
+transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+.ellipse4{
+box-sizing: border-box;
+position: absolute;
+width: 380px;
+height: 547px;
+left: 8%;
+top: 1050px;
+transform: rotate(-25deg);
+}
+
+.ellipse5{
+    box-sizing: border-box;
+    position: absolute;
+    width: 380px;
+    height: 547px;
+    left: 10%;
+    top: 1050px;
+    transform: rotate(-25deg);
+}
+
+.ellipse6{
+    box-sizing: border-box;
+    position: absolute;
+    width: 380px;
+    height: 547px;
+    left: 12%;
+    top: 1050px;
+    transform: rotate(-25deg);
+}
+
+.premium{
+    position: absolute;
+    width: 638px;
+    height: 56px;
+    left: calc(50% - 638px/2 + 329px);
+    top: 1100px;
+    font-family: clash;
+}
+
+.premium span{
+    color: red;
+    font-weight: 500;
+    opacity: 0.5;
+}
+
+.premium h1{
+    margin-top:30px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    font-size: 60px;;
+    line-height: 30px;
+}
+
+.premium h2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px;
+}
+
+.premium p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 40px;
+    text-transform: capitalize;
+    color: #000000;
+    opacity: 0.5;
 }
